# filepath: /home/nico/WORK_ROOT/tcp_congestion_linux_cmp/configure.ac
AC_INIT([TCP Congestion Policies Comparison], [1.0], [your.email@example.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_create])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h sys/socket.h unistd.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
